// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RentalAssistance should be able to show the add rental assistance form along with the table 1`] = `
Array [
  <div
    className="form-grid row expand"
  >
    <div
      className="small-12 column"
    >
      <div
        className="scrollable-table-container-under-xlarge"
      >
        <table
          className="td-light td-plain th-plain rental-assistances"
          role="grid"
        >
          <thead>
            <tr>
              <th
                className=""
                scope="col"
              >
                Type of Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Recurring Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Assistance Amount
              </th>
              <th
                className=""
                scope="col"
              >
                Recipient
              </th>
              <th
                className=""
                scope="col"
              >
                Edit
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              aria-expanded={false}
              className="tr-expand"
            >
              <td
                className=""
              >
                Compass Family
              </td>
              <td
                className=""
              >
                Yes
              </td>
              <td
                className=""
              >
                $100
              </td>
              <td
                className=""
              >
                Test Tester
              </td>
              <td>
                <button
                  className="button button-link action-link"
                  onClick={[Function]}
                  type="button"
                >
                  Edit
                </button>
              </td>
            </tr>
            <tr
              aria-hidden={true}
              className="tr-expand-content"
            >
              <td
                className="td-expand-nested no-padding"
                colSpan={5}
              >
                <div
                  className="app-editable expand-wide scrollable-table-nested"
                >
                  <div
                    className="app-editable expand-wide scrollable-table-nested rental-assistance-form"
                  >
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="type_of_assistance"
                          >
                            Type of Assistance 
                          </label>
                          <select
                            className="rental-assistance-type"
                            id="type_of_assistance"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value={2}
                          >
                            <option
                              disabled={true}
                              value={0}
                            >
                              Select One...
                            </option>
                            <option
                              disabled={undefined}
                              value={1}
                            >
                              Catholic Charities
                            </option>
                            <option
                              disabled={undefined}
                              value={2}
                            >
                              Compass Family
                            </option>
                            <option
                              disabled={undefined}
                              value={3}
                            >
                              Glide
                            </option>
                            <option
                              disabled={undefined}
                              value={4}
                            >
                              Hamilton Family
                            </option>
                            <option
                              disabled={undefined}
                              value={5}
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              disabled={undefined}
                              value={6}
                            >
                              HOPWA
                            </option>
                            <option
                              disabled={undefined}
                              value={7}
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              disabled={undefined}
                              value={8}
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              disabled={undefined}
                              value={9}
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              disabled={undefined}
                              value={10}
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              disabled={undefined}
                              value={11}
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              disabled={undefined}
                              value={12}
                            >
                              Section 8 HCV (Tenant) Voucher
                            </option>
                            <option
                              disabled={undefined}
                              value={13}
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              disabled={undefined}
                              value={14}
                            >
                              VASH Voucher
                            </option>
                            <option
                              disabled={undefined}
                              value={15}
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="recurring_assistance"
                          >
                            Recurring Assistance 
                          </label>
                          <div
                            className="no-margin radio-group-inline"
                          >
                            <p
                              className="radio-inline"
                            >
                              <input
                                checked={true}
                                className="rental-assistance-recurring"
                                id="recurring_assistance-new-yes"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="radio-inline_label"
                                htmlFor="recurring_assistance-new-yes"
                              >
                                Yes
                              </label>
                            </p>
                            <p
                              className="radio-inline"
                            >
                              <input
                                checked={false}
                                className="rental-assistance-recurring"
                                id="recurring_assistance-new-no"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="radio-inline_label"
                                htmlFor="recurring_assistance-new-no"
                              >
                                No
                              </label>
                            </p>
                          </div>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="assistance_amount"
                          >
                            Assistance Amount 
                          </label>
                          <input
                            className=""
                            id="assistance_amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                            type="number"
                            value="100"
                          />
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="recipient"
                          >
                            Recipient 
                          </label>
                          <select
                            className="rental-assistance-recipient"
                            id="recipient"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value={1}
                          >
                            <option
                              disabled={true}
                              value={0}
                            >
                              Select One...
                            </option>
                            <option
                              disabled={undefined}
                              value={1}
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item column"
                      >
                        <button
                          className="button primary tiny margin-right margin-bottom-none"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Save
                        </button>
                        <button
                          className="button secondary tiny margin-right margin-bottom-none"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Cancel
                        </button>
                        <button
                          className="button alert-fill tiny margin-bottom-none right"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <div
    className="rental-assistance-form-new"
  >
    <div
      className="app-editable expand-wide scrollable-table-nested rental-assistance-form"
    >
      <div
        className="form-grid row"
      >
        <div
          className="form-grid_item small-12 medium-6 large-3 column"
        >
          <div
            className="form-group"
          >
            <label
              className="form-label"
              htmlFor="type_of_assistance"
            >
              Type of Assistance 
            </label>
            <select
              className="rental-assistance-type"
              id="type_of_assistance"
              onBlur={[Function]}
              onChange={[Function]}
              value={0}
            >
              <option
                disabled={true}
                value={0}
              >
                Select One...
              </option>
              <option
                disabled={undefined}
                value={1}
              >
                Catholic Charities
              </option>
              <option
                disabled={undefined}
                value={2}
              >
                Compass Family
              </option>
              <option
                disabled={undefined}
                value={3}
              >
                Glide
              </option>
              <option
                disabled={undefined}
                value={4}
              >
                Hamilton Family
              </option>
              <option
                disabled={undefined}
                value={5}
              >
                Homeless Prenatal
              </option>
              <option
                disabled={undefined}
                value={6}
              >
                HOPWA
              </option>
              <option
                disabled={undefined}
                value={7}
              >
                Q Foundation: First Month’s Rent
              </option>
              <option
                disabled={undefined}
                value={8}
              >
                Q Foundation: Move-in Deposit
              </option>
              <option
                disabled={undefined}
                value={9}
              >
                Q Foundation: Person with Disability Rent Subsidy
              </option>
              <option
                disabled={undefined}
                value={10}
              >
                Q Foundation: Senior Rent Subsidy
              </option>
              <option
                disabled={undefined}
                value={11}
              >
                San Francisco AIDS Foundation
              </option>
              <option
                disabled={undefined}
                value={12}
              >
                Section 8 HCV (Tenant) Voucher
              </option>
              <option
                disabled={undefined}
                value={13}
              >
                Self-Help for the Elderly
              </option>
              <option
                disabled={undefined}
                value={14}
              >
                VASH Voucher
              </option>
              <option
                disabled={undefined}
                value={15}
              >
                Other
              </option>
            </select>
          </div>
        </div>
        <div
          className="form-grid_item small-12 medium-6 large-3 column"
        >
          <div
            className="form-group"
          >
            <label
              className="form-label"
              htmlFor="recurring_assistance"
            >
              Recurring Assistance 
            </label>
            <div
              className="no-margin radio-group-inline"
            >
              <p
                className="radio-inline"
              >
                <input
                  checked={false}
                  className="rental-assistance-recurring"
                  id="recurring_assistance-new-yes"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="radio-inline_label"
                  htmlFor="recurring_assistance-new-yes"
                >
                  Yes
                </label>
              </p>
              <p
                className="radio-inline"
              >
                <input
                  checked={false}
                  className="rental-assistance-recurring"
                  id="recurring_assistance-new-no"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="radio-inline_label"
                  htmlFor="recurring_assistance-new-no"
                >
                  No
                </label>
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-grid_item small-12 medium-6 large-3 column"
        >
          <div
            className="form-group"
          >
            <label
              className="form-label"
              htmlFor="assistance_amount"
            >
              Assistance Amount 
            </label>
            <input
              className=""
              id="assistance_amount"
              onBlur={[Function]}
              onChange={[Function]}
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          className="form-grid_item small-12 medium-6 large-3 column"
        >
          <div
            className="form-group"
          >
            <label
              className="form-label"
              htmlFor="recipient"
            >
              Recipient 
            </label>
            <select
              className="rental-assistance-recipient"
              id="recipient"
              onBlur={[Function]}
              onChange={[Function]}
              value={0}
            >
              <option
                disabled={true}
                value={0}
              >
                Select One...
              </option>
              <option
                disabled={undefined}
                value={1}
              >
                Test Tester
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="form-grid row"
      >
        <div
          className="form-grid_item column"
        >
          <button
            className="button primary tiny margin-right margin-bottom-none"
            disabled={undefined}
            onClick={[Function]}
            type="button"
          >
            Save
          </button>
          <button
            className="button secondary tiny margin-right margin-bottom-none"
            disabled={undefined}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>,
]
`;

exports[`RentalAssistance should not render a table if rental assistances is empty 1`] = `
<button
  className="button small"
  id="add-rental-assistance"
  onClick={[Function]}
>
  Add Rental Assistance
</button>
`;

exports[`RentalAssistance should render a table when rental assistances are present 1`] = `
Array [
  <div
    className="form-grid row expand"
  >
    <div
      className="small-12 column"
    >
      <div
        className="scrollable-table-container-under-xlarge"
      >
        <table
          className="td-light td-plain th-plain rental-assistances"
          role="grid"
        >
          <thead>
            <tr>
              <th
                className=""
                scope="col"
              >
                Type of Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Recurring Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Assistance Amount
              </th>
              <th
                className=""
                scope="col"
              >
                Recipient
              </th>
              <th
                className=""
                scope="col"
              >
                Edit
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              aria-expanded={false}
              className="tr-expand"
            >
              <td
                className=""
              >
                Compass Family
              </td>
              <td
                className=""
              >
                Yes
              </td>
              <td
                className=""
              >
                $100
              </td>
              <td
                className=""
              >
                Test Tester
              </td>
              <td>
                <button
                  className="button button-link action-link"
                  onClick={[Function]}
                  type="button"
                >
                  Edit
                </button>
              </td>
            </tr>
            <tr
              aria-hidden={true}
              className="tr-expand-content"
            >
              <td
                className="td-expand-nested no-padding"
                colSpan={5}
              >
                <div
                  className="app-editable expand-wide scrollable-table-nested"
                >
                  <div
                    className="app-editable expand-wide scrollable-table-nested rental-assistance-form"
                  >
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="type_of_assistance"
                          >
                            Type of Assistance 
                          </label>
                          <select
                            className="rental-assistance-type"
                            id="type_of_assistance"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value={2}
                          >
                            <option
                              disabled={true}
                              value={0}
                            >
                              Select One...
                            </option>
                            <option
                              disabled={undefined}
                              value={1}
                            >
                              Catholic Charities
                            </option>
                            <option
                              disabled={undefined}
                              value={2}
                            >
                              Compass Family
                            </option>
                            <option
                              disabled={undefined}
                              value={3}
                            >
                              Glide
                            </option>
                            <option
                              disabled={undefined}
                              value={4}
                            >
                              Hamilton Family
                            </option>
                            <option
                              disabled={undefined}
                              value={5}
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              disabled={undefined}
                              value={6}
                            >
                              HOPWA
                            </option>
                            <option
                              disabled={undefined}
                              value={7}
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              disabled={undefined}
                              value={8}
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              disabled={undefined}
                              value={9}
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              disabled={undefined}
                              value={10}
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              disabled={undefined}
                              value={11}
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              disabled={undefined}
                              value={12}
                            >
                              Section 8 HCV (Tenant) Voucher
                            </option>
                            <option
                              disabled={undefined}
                              value={13}
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              disabled={undefined}
                              value={14}
                            >
                              VASH Voucher
                            </option>
                            <option
                              disabled={undefined}
                              value={15}
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="recurring_assistance"
                          >
                            Recurring Assistance 
                          </label>
                          <div
                            className="no-margin radio-group-inline"
                          >
                            <p
                              className="radio-inline"
                            >
                              <input
                                checked={true}
                                className="rental-assistance-recurring"
                                id="recurring_assistance-new-yes"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="radio-inline_label"
                                htmlFor="recurring_assistance-new-yes"
                              >
                                Yes
                              </label>
                            </p>
                            <p
                              className="radio-inline"
                            >
                              <input
                                checked={false}
                                className="rental-assistance-recurring"
                                id="recurring_assistance-new-no"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="radio-inline_label"
                                htmlFor="recurring_assistance-new-no"
                              >
                                No
                              </label>
                            </p>
                          </div>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="assistance_amount"
                          >
                            Assistance Amount 
                          </label>
                          <input
                            className=""
                            id="assistance_amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                            type="number"
                            value="100"
                          />
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="recipient"
                          >
                            Recipient 
                          </label>
                          <select
                            className="rental-assistance-recipient"
                            id="recipient"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value={1}
                          >
                            <option
                              disabled={true}
                              value={0}
                            >
                              Select One...
                            </option>
                            <option
                              disabled={undefined}
                              value={1}
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item column"
                      >
                        <button
                          className="button primary tiny margin-right margin-bottom-none"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Save
                        </button>
                        <button
                          className="button secondary tiny margin-right margin-bottom-none"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Cancel
                        </button>
                        <button
                          className="button alert-fill tiny margin-bottom-none right"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>,
]
`;

exports[`RentalAssistance should show the Other Assistance Name in the table when Type of Assistance is Other 1`] = `
Array [
  <div
    className="form-grid row expand"
  >
    <div
      className="small-12 column"
    >
      <div
        className="scrollable-table-container-under-xlarge"
      >
        <table
          className="td-light td-plain th-plain rental-assistances"
          role="grid"
        >
          <thead>
            <tr>
              <th
                className=""
                scope="col"
              >
                Type of Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Recurring Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Assistance Amount
              </th>
              <th
                className=""
                scope="col"
              >
                Recipient
              </th>
              <th
                className=""
                scope="col"
              >
                Edit
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              aria-expanded={false}
              className="tr-expand"
            >
              <td
                className=""
              >
                Test Other Assistance Name
              </td>
              <td
                className=""
              >
                Yes
              </td>
              <td
                className=""
              >
                $100
              </td>
              <td
                className=""
              >
                Test Tester
              </td>
              <td>
                <button
                  className="button button-link action-link"
                  onClick={[Function]}
                  type="button"
                >
                  Edit
                </button>
              </td>
            </tr>
            <tr
              aria-hidden={true}
              className="tr-expand-content"
            >
              <td
                className="td-expand-nested no-padding"
                colSpan={5}
              >
                <div
                  className="app-editable expand-wide scrollable-table-nested"
                >
                  <div
                    className="app-editable expand-wide scrollable-table-nested rental-assistance-form"
                  >
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="type_of_assistance"
                          >
                            Type of Assistance 
                          </label>
                          <select
                            className="rental-assistance-type"
                            id="type_of_assistance"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value={15}
                          >
                            <option
                              disabled={true}
                              value={0}
                            >
                              Select One...
                            </option>
                            <option
                              disabled={undefined}
                              value={1}
                            >
                              Catholic Charities
                            </option>
                            <option
                              disabled={undefined}
                              value={2}
                            >
                              Compass Family
                            </option>
                            <option
                              disabled={undefined}
                              value={3}
                            >
                              Glide
                            </option>
                            <option
                              disabled={undefined}
                              value={4}
                            >
                              Hamilton Family
                            </option>
                            <option
                              disabled={undefined}
                              value={5}
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              disabled={undefined}
                              value={6}
                            >
                              HOPWA
                            </option>
                            <option
                              disabled={undefined}
                              value={7}
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              disabled={undefined}
                              value={8}
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              disabled={undefined}
                              value={9}
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              disabled={undefined}
                              value={10}
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              disabled={undefined}
                              value={11}
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              disabled={undefined}
                              value={12}
                            >
                              Section 8 HCV (Tenant) Voucher
                            </option>
                            <option
                              disabled={undefined}
                              value={13}
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              disabled={undefined}
                              value={14}
                            >
                              VASH Voucher
                            </option>
                            <option
                              disabled={undefined}
                              value={15}
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="recurring_assistance"
                          >
                            Recurring Assistance 
                          </label>
                          <div
                            className="no-margin radio-group-inline"
                          >
                            <p
                              className="radio-inline"
                            >
                              <input
                                checked={true}
                                className="rental-assistance-recurring"
                                id="recurring_assistance-new-yes"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="radio-inline_label"
                                htmlFor="recurring_assistance-new-yes"
                              >
                                Yes
                              </label>
                            </p>
                            <p
                              className="radio-inline"
                            >
                              <input
                                checked={false}
                                className="rental-assistance-recurring"
                                id="recurring_assistance-new-no"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="radio-inline_label"
                                htmlFor="recurring_assistance-new-no"
                              >
                                No
                              </label>
                            </p>
                          </div>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="assistance_amount"
                          >
                            Assistance Amount 
                          </label>
                          <input
                            className=""
                            id="assistance_amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                            type="number"
                            value="100"
                          />
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="recipient"
                          >
                            Recipient 
                          </label>
                          <select
                            className="rental-assistance-recipient"
                            id="recipient"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value={1}
                          >
                            <option
                              disabled={true}
                              value={0}
                            >
                              Select One...
                            </option>
                            <option
                              disabled={undefined}
                              value={1}
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="other_assistance_name"
                          >
                            Other Assistance Name 
                          </label>
                          <input
                            className=""
                            id="other_assistance_name"
                            onBlur={[Function]}
                            onChange={[Function]}
                            value="Test Other Assistance Name"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item column"
                      >
                        <button
                          className="button primary tiny margin-right margin-bottom-none"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Save
                        </button>
                        <button
                          className="button secondary tiny margin-right margin-bottom-none"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Cancel
                        </button>
                        <button
                          className="button alert-fill tiny margin-bottom-none right"
                          disabled={undefined}
                          onClick={[Function]}
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>,
]
`;
